@@ -14,7 +14,6 @@ package org.openhab.binding.ojelectronics.internal;
 
 import static org.openhab.binding.ojelectronics.internal.BindingConstants.THING_TYPE_OWD5;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -38,7 +37,7 @@ import org.osgi.service.component.annotations.Reference;
 @Component(configurationPid = "binding.ojelectronics", service = ThingHandlerFactory.class)
 public class ThermostatHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_OWD5);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_OWD5);
     private final TimeZoneProvider timeZoneProvider;
 
     /**
